--- a/index.html
+++ b/index.html
@@ -1,11 +1,95 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-<html>
-  <head>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  </head>
+  <link rel="stylesheet" href="./styles.css">
 
-  <body>
-    
-  </body>
+  <title>See Bully Camp</title>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar">
+
+      <div class="logoContainer">
+        <span class="logo">See Bully Camp</span>
+      </div>
+
+      <div class="container-fluid">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item dropdown">
+            <div class="dropdown">
+              <a class="nav-link" href="#">Our Bullies</a>
+              <div class="dropdown-content">
+                <a href="#">Sires</a>
+                <a href="#">Dam</a>
+                <a href="#">Available Pups</a>
+              </div>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <div class="dropdown">
+              <a class="nav-link" href="#">Social Media</a>
+              <div class="dropdown-content">
+                <a href="https://www.tiktok.com/@seebullycamp" target="_blank">TikTok</a>
+                <a href="https://www.instagram.com/tonysee91/" target="_blank">Instagram</a>
+                <a href="https://www.bullypedex.com/pedigree/maple-d" target="_blank">BullyPedex</a>
+              </div>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+
+    </nav>
+  </header>
+
+  <main>
+      <div class="homeContainer">
+          <div id="about">
+            <div class="aboutUs">
+              <h3>About Us:</h3>
+              <img src="https://fakeimg.pl/300x200" alt="placeholder">
+            </div>
+
+            <div class="missionStatement">
+              <p>At See Bully Camp, founded by Tony See, our mission is to breed top-quality Exotic Bullies with a strong focus on health, temperament, and breed standards. We are dedicated to responsible breeding practices, education, and ensuring the well-being of our dogs and their future families. Our goal is to elevate the Exotic Bully breed while promoting ethical ownership.</p>
+            </div>
+
+          </div>
+
+
+
+          <div id="contact">
+            <h3>Request Contact:</h3>
+          </div>
+
+      </div>
+  </main>
+
+  <footer>
+    <ul>
+
+      <li><a href="https://www.tiktok.com/@seebullycamp" target="_blank">TikTok</a></li>
+
+      <li><a href="https://www.instagram.com/tonysee91/" target="_blank">Instagram</a></li>
+
+      <li><a href="https://www.bullypedex.com/pedigree/maple-d" target="_blank">BullyPedex</a></li>
+
+      </ul>
+
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  <script src="./index.js"></script>
+</body>
 </html>
