made landing page responsive adding media queries

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <div class="imgContainer">
               
          
-                <img src="https://fakeimg.pl/300x200" alt="placeholder">
+                <img src="./img/tony.jpg" alt="placeholder">
               </div>
   
               <div class="missionStatement">
