fixed margin botton for main content and fixed media queries pertaining to h3

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li class="nav-item dropdown">
             <div class="dropdown">
               <a class="nav-link" href="./doggies.html">Our Bullies</a>
-              <div class="dropdown-content">
+              <div class="dropdown-content"id="dropLink">
                 <a href="./doggies.html#siresPage">Sires</a>
                 <a href="./doggies.html#damsPage">Dam</a>
                 <a href="./doggies.html#pupsPage">Available Pups</a>
@@ -39,7 +39,7 @@
           <li class="nav-item dropdown">
             <div class="dropdown">
               <a class="nav-link" href="#">Social Media</a>
-              <div class="dropdown-content">
+              <div class="dropdown-content" >
                 <a href="https://www.tiktok.com/@seebullycamp" target="_blank">TikTok</a>
                 <a href="https://www.instagram.com/tonysee91/" target="_blank">Instagram</a>
                 <a href="https://www.bullypedex.com/pedigree/maple-d" target="_blank">BullyPedex</a>
